ajustes de view

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "joao_/final-project",
     "require-dev": {
-        "phpunit/phpunit": "^9.2"
+        "phpunit/phpunit": "~9.2"
     },
     "autoload": {
         "psr-4": {
@@ -17,7 +17,7 @@
     ],
     "require": {
         "bramus/router": "~1.4",
-        "twig/twig": "^3.0",
-        "league/plates": "^3.3"
+        "twig/twig": "~3.0",
+        "league/plates": "~3.3"
     }
 }
