--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "joao_/final-project",
     "require-dev": {
-        "phpunit/phpunit": "~9.2"
+        "phpunit/phpunit": "^9.2.0"
     },
     "autoload": {
         "psr-4": {
@@ -16,8 +16,9 @@
         }
     ],
     "require": {
-        "bramus/router": "~1.4",
-        "twig/twig": "~3.0",
-        "league/plates": "~3.3"
+        "bramus/router": "^1.4",
+        "twig/twig": "^3.0",
+        "league/plates": "^3.3",
+        "vlucas/phpdotenv": "^5.1"
     }
 }
